# lotto_tracker

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject 2.toml  pyproject.toml
backend/app/: bootstrap.py  config.py  db.py  demo.py  deps.py  main.py  security.py  seed.py
backend/app/models/: __init__.py  base.py  draw.py  reference.py  ticket.py  user.py
backend/app/ocr/: __init__.py  base.py  mock.py
backend/app/prizes/: __init__.py  cost.py  engine.py  matching.py
backend/app/results/: csv_ingest.py  demo_draws.py  matching.py  pipeline.py
backend/app/routers/: analytics.py  auth.py  invites.py  ocr.py  results.py  tickets.py
backend/app/schemas/: auth.py  ticket.py
backend/app/services/: analytics.py  draws.py  invites.py  ocr.py  tickets.py
backend/lotto_tracker_backend.egg-info/: PKG-INFO  PKG-INFO 2  SOURCES.txt  requires.txt
backend/migrations/: env.py
backend/migrations/versions/: b087751d9279_initial.py
backend/tests/: conftest.py  test_analytics.py  test_analytics_api.py  test_auth_flow.py  test_config.py  test_csv_ingest.py  test_db.py  test_domain_models.py  test_matching.py  test_migration.py  test_ocr_api.py  test_ocr_mock.py  test_prizes_cost.py  test_prizes_engine.py  test_prizes_matching.py  test_reference_models.py  test_results_api.py  test_security.py  test_seed.py  test_tickets_api.py  test_tickets_service.py
docs/superpowers/plans/: 2026-07-02-foundation.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/lib/: api.ts  auth.tsx  (+2 more)
(+35 files in other folders)
